testfx/errors/error_tests/edge_15_correct_if.fx
// 测试: 正确的 FLYUX if 语法（应该通过）
x := 10
if (x > 5) {
    println("big")
}
